<resources>
    <string name="app_name">NotePad</string>
    <string name="imagen_de_fondo">Imagen de fondo</string>
    <string name="sp_last_user">sp_lastUsername</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Recuerdame</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="register_text">Registrarse</string>
    <string name="users">Usuarios</string>
    <string name="title">NotePad</string>
    <string name="TitleMain">Notes</string>
    <string name="description_note_add">Añadir Nota</string>
    <string name="NoteTitle">Título de la nota</string>
    <string name="NoteContent">Contenido de la nota</string>
    <string name="textButtonBack">Back</string>
    <string name="textButtonOk">OK</string>
    <string name="edit_store_title_add">Modificando Nota</string>
    <string name="menu_save">ok</string>
    <string name="arg_id">argID</string>
    <string name="edit_Note_message_valid">Nota Validada correctamente</string>
    <string name="helper_required">Campo obligatorio</string>
    <string name="edit_Note_title_edit">Editar Nota</string>
    <string name="edit_Note_title_add">Añadir Nota</string>
    <string name="edit_Note_message_update_success">Nota actualizada correctamente</string>
    <string name="edit_Note_message_save_success">Nota Creada Correctamente</string>
    <string name="backButton">back</string>
</resources>