<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainModule.ActionsActivity">


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/textButtonBack"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/woodLightOrange"
        android:drawableLeft="@drawable/ic_arrow_left"
        android:drawableTint="@color/woodLightOrange"
        android:padding="0dp"
        android:drawablePadding="0dp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/textButtonOk"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/woodLightOrange"
        android:textAlignment="textEnd"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_S"
        android:layout_marginEnd="@dimen/margin_S"
        android:autofillHints=""
        android:hint="@string/NoteTitle"
        android:textSize="@dimen/TitleNoteSize"
        android:textStyle="bold"
        android:inputType="textCapSentences"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sfbold"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="@id/editTextTitle"
        app:layout_constraintEnd_toEndOf="@id/editTextTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_XXS"
        app:helperTextTextColor="@color/woodLightOrange"
        app:boxStrokeColor="@color/woodLightOrange"
        app:hintTextColor="@color/woodLightOrange"
        >
        <EditText
            android:id="@+id/contentNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/NoteContent"
            android:textColorHint="@color/woodLightOrange"
            android:textSize="@dimen/contentNoteSize"
            android:scrollbars="vertical"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="@dimen/padding_XXS"
            android:paddingStart="@dimen/padding_XXS"
            android:paddingEnd="@dimen/padding_XXS"
            android:fontFamily="@font/sfprotext"
            />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>